--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -189,7 +189,7 @@ header .navbar__wrapper .navbar_list li a:hover {
 }
 /* line 201, ../sass/index.scss */
 .main .contact ul li {
-  padding-bottom: 1.3git em;
+  padding-bottom: 1.3em;
   font-size: 1.1em;
   list-style: none;
 }
@@ -271,9 +271,37 @@ header .navbar__wrapper .navbar_list li a:hover {
 footer {
   display: block;
   text-align: center;
+  width: 85%;
+  margin: 10px auto;
+}
+/* line 295, ../sass/index.scss */
+footer p {
+  display: inline-block;
+  width: 55%;
+  text-align: left;
+}
+/* line 302, ../sass/index.scss */
+footer .icons {
+  display: inline-block;
+  text-align: right;
+  width: 35%;
+}
+/* line 307, ../sass/index.scss */
+footer .icons li {
+  display: inline-block;
+  padding: 0 5px;
+  font-size: 1em;
+  font-weight: 100;
+  text-decoration: none;
+  color: #FD2B2A;
+}
+/* line 315, ../sass/index.scss */
+footer .icons li a {
+  text-decoration: none;
+  color: #FD2B2A;
 }
 
-/* line 294, ../sass/index.scss */
+/* line 323, ../sass/index.scss */
 .card {
   background-color: white;
   display: inline-block;
@@ -287,18 +315,18 @@ footer {
   text-align: left;
   overflow: initial;
 }
-/* line 307, ../sass/index.scss */
+/* line 336, ../sass/index.scss */
 .card .card-header {
   text-align: center;
   font-size: 1.25em;
 }
-/* line 313, ../sass/index.scss */
+/* line 342, ../sass/index.scss */
 .card ul.stack__collection li {
   padding-bottom: 1em;
   font-size: 1.1em;
   list-style: none;
 }
-/* line 318, ../sass/index.scss */
+/* line 347, ../sass/index.scss */
 .card ul.stack__collection li:before {
   position: relative;
   font-family: "FontAwesome";
@@ -307,24 +335,25 @@ footer {
   color: #FD2B2A;
   margin: 0 12px 0 0;
 }
-/* line 329, ../sass/index.scss */
+/* line 358, ../sass/index.scss */
 .card.medium {
   height: 290px;
   width: 290px;
   margin: 0px 1.2em;
 }
-/* line 335, ../sass/index.scss */
+/* line 364, ../sass/index.scss */
 .card.very-large {
   height: 300px;
   width: 800px;
+  margin-right: 25px;
 }
-/* line 340, ../sass/index.scss */
+/* line 370, ../sass/index.scss */
 .card.square {
   height: 300px;
   width: 300px;
 }
 
-/* line 348, ../sass/index.scss */
+/* line 378, ../sass/index.scss */
 .section-header {
   text-align: center;
   font-size: 1.5em;
@@ -334,100 +363,100 @@ footer {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  /* line 360, ../sass/index.scss */
+  /* line 390, ../sass/index.scss */
   header .navbar__inner {
     display: block;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 366, ../sass/index.scss */
+  /* line 396, ../sass/index.scss */
   header .navbar__inner .navbar__logo {
     display: inline-block;
     padding: 0px 25px;
   }
-  /* line 371, ../sass/index.scss */
+  /* line 401, ../sass/index.scss */
   header .navbar__inner .navbar__logo .__logo {
     width: 60px;
   }
-  /* line 377, ../sass/index.scss */
+  /* line 407, ../sass/index.scss */
   header .navbar__wrapper {
     display: block;
     width: 95%;
     text-align: center;
   }
-  /* line 383, ../sass/index.scss */
+  /* line 413, ../sass/index.scss */
   header .navbar__wrapper .navbar_list {
     padding: 5px;
     display: flex;
     justify-content: space-evenly;
   }
-  /* line 389, ../sass/index.scss */
+  /* line 419, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li {
     display: inline-block;
     padding: 0px;
   }
-  /* line 393, ../sass/index.scss */
+  /* line 423, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a {
     text-decoration: none;
     padding: 15px 15px;
     font-size: 1.1em;
     color: #707070;
   }
-  /* line 399, ../sass/index.scss */
+  /* line 429, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a:hover {
     border-bottom: 2px solid #FD2B2A;
   }
 
-  /* line 412, ../sass/index.scss */
+  /* line 442, ../sass/index.scss */
   .main .hero .hero__content {
     display: flex;
     width: 300px;
     margin: 0 auto;
   }
-  /* line 417, ../sass/index.scss */
+  /* line 447, ../sass/index.scss */
   .main .hero .hero__content .__logo {
     height: 150px;
   }
-  /* line 421, ../sass/index.scss */
+  /* line 451, ../sass/index.scss */
   .main .hero .hero__content .hero__text {
     margin: 20px auto;
     padding: 0px 10px;
     text-align: center;
   }
-  /* line 426, ../sass/index.scss */
+  /* line 456, ../sass/index.scss */
   .main .hero .hero__content .hero__text h2 {
     font-size: 1.0em;
   }
-  /* line 430, ../sass/index.scss */
+  /* line 460, ../sass/index.scss */
   .main .hero .hero__content .hero__text a {
     font-size: 0.9em;
   }
-  /* line 438, ../sass/index.scss */
+  /* line 468, ../sass/index.scss */
   .main .portfolio {
     margin: 100px 0;
   }
-  /* line 441, ../sass/index.scss */
+  /* line 471, ../sass/index.scss */
   .main .portfolio .row {
     width: 100%;
     display: block;
   }
-  /* line 446, ../sass/index.scss */
+  /* line 476, ../sass/index.scss */
   .main .portfolio .pf-card {
     display: inline-block;
     margin: 0.5em 0.5em;
     color: white;
   }
-  /* line 451, ../sass/index.scss */
+  /* line 481, ../sass/index.scss */
   .main .portfolio .pf-card .card-header {
     margin-top: 4em;
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 457, ../sass/index.scss */
+  /* line 487, ../sass/index.scss */
   .main .portfolio .pf-card .description {
     padding: 0em 2em;
   }
-  /* line 461, ../sass/index.scss */
+  /* line 491, ../sass/index.scss */
   .main .portfolio .pf-card.large {
     width: 280px;
     height: 280px;
@@ -435,7 +464,7 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 470, ../sass/index.scss */
+  /* line 500, ../sass/index.scss */
   .main .portfolio .pf-card.small {
     width: 280px;
     height: 280px;
@@ -443,24 +472,24 @@ footer {
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 477, ../sass/index.scss */
+  /* line 507, ../sass/index.scss */
   .main .portfolio .pf-card.small .card-header {
     margin-top: 2em;
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 488, ../sass/index.scss */
+  /* line 518, ../sass/index.scss */
   .main .contact .row {
     margin: 0 auto;
     width: 100%;
     text-align: center;
     display: block;
   }
-  /* line 497, ../sass/index.scss */
+  /* line 527, ../sass/index.scss */
   .main .contact #submit-form .row {
     width: 90%;
   }
-  /* line 501, ../sass/index.scss */
+  /* line 531, ../sass/index.scss */
   .main .contact #submit-form input[type=text] {
     border: none;
     box-shadow: none;
@@ -471,7 +500,7 @@ footer {
     margin-bottom: 30px;
     background-color: #f8f8f8;
   }
-  /* line 512, ../sass/index.scss */
+  /* line 542, ../sass/index.scss */
   .main .contact #submit-form input[type=submit] {
     height: 42px;
     border-radius: 27px;
@@ -487,75 +516,84 @@ footer {
     cursor: pointer;
     text-transform: uppercase;
   }
-  /* line 527, ../sass/index.scss */
+  /* line 557, ../sass/index.scss */
   .main .contact #submit-form input[type=submit]:hover {
     color: #FD2B2A;
     background-color: #FFF;
   }
-  /* line 533, ../sass/index.scss */
+  /* line 563, ../sass/index.scss */
   .main .contact #submit-form .half-width {
     display: block;
     width: 80%;
     margin: auto;
   }
-  /* line 539, ../sass/index.scss */
+  /* line 569, ../sass/index.scss */
   .main .contact #submit-form .full-width {
     display: block;
     width: 80%;
     margin: auto;
   }
 
-  /* line 550, ../sass/index.scss */
+  /* line 580, ../sass/index.scss */
   footer {
     display: block;
     text-align: center;
   }
-  /* line 554, ../sass/index.scss */
-  footer .icons {
-    padding: 0px;
+  /* line 584, ../sass/index.scss */
+  footer p {
+    display: block;
+    width: 100%;
+    text-align: center;
   }
-  /* line 557, ../sass/index.scss */
+  /* line 590, ../sass/index.scss */
+  footer .icons {
+    display: block;
+    padding: 0px;
+    width: 100%;
+    text-align: center;
+  }
+  /* line 597, ../sass/index.scss */
   footer .icons li {
     display: inline-block;
-    padding: 0 10px;
-    font-size: 24px;
+    padding: 0 5px;
+    font-size: 1em;
     font-weight: 100;
     text-decoration: none;
     color: #FD2B2A;
   }
-  /* line 565, ../sass/index.scss */
+  /* line 605, ../sass/index.scss */
   footer .icons li a {
     text-decoration: none;
     color: #FD2B2A;
   }
 
-  /* line 574, ../sass/index.scss */
+  /* line 614, ../sass/index.scss */
   .card {
     padding: 10px 5px;
   }
-  /* line 578, ../sass/index.scss */
+  /* line 618, ../sass/index.scss */
   .card .card-header {
     text-align: center;
     font-size: 1.25em;
   }
-  /* line 584, ../sass/index.scss */
+  /* line 624, ../sass/index.scss */
   .card ul li {
     padding-bottom: 1em;
     font-size: 1.1em;
   }
-  /* line 590, ../sass/index.scss */
+  /* line 630, ../sass/index.scss */
   .card.medium {
     width: 250px;
     margin: 20px 1.2em;
   }
-  /* line 595, ../sass/index.scss */
+  /* line 635, ../sass/index.scss */
   .card.very-large {
     width: 250px;
     height: 100%;
     margin: 0px 0px 25px 0px;
     padding-bottom: 2em;
   }
-  /* line 602, ../sass/index.scss */
+  /* line 643, ../sass/index.scss */
   .card.square {
     width: 250px;
   }
