--- a/sass/index.scss
+++ b/sass/index.scss
@@ -128,8 +128,7 @@ header {
             color: white;
 
             .card-header {
-                margin-top: 4em;
-                font-size: 1.2em;
+                font-size: 1.4em;
                 font-weight: 600;
             }
 
@@ -139,10 +138,10 @@ header {
 
             &.large {
                 width: 650px;
-                height: 250px;
                 background-position: 50%;
                 background-repeat: no-repeat;
                 background-size: cover;
+                padding: 50px 0px;
 
                 &.first {
                     background-image: -webkit-gradient(linear, right top, left top, from(rgba(218, 33, 33, .0)), to(rgba(218, 33, 33, .0))), url("../images/bg.jpg");
@@ -158,13 +157,12 @@ header {
 
             &.small {
                 width: 450px;
-                height: 200px;
                 background-position: 50%;
                 background-repeat: no-repeat;
                 background-size: cover;
+                padding: 25px 0px;
 
                 .card-header {
-                    margin-top: 2em;
                     font-size: 1.2em;
                     font-weight: 600;
                 }
@@ -479,7 +477,6 @@ footer {
                 color: white;
 
                 .card-header {
-                    margin-top: 4em;
                     font-size: 1.2em;
                     font-weight: 600;
                 }
@@ -490,7 +487,6 @@ footer {
 
                 &.large {
                     width: 280px;
-                    height: 280px;
                     background-position: 50%;
                     background-repeat: no-repeat;
                     background-size: cover;
@@ -499,13 +495,11 @@ footer {
 
                 &.small {
                     width: 280px;
-                    height: 280px;
                     background-position: 50%;
                     background-repeat: no-repeat;
                     background-size: cover;
 
                     .card-header {
-                        margin-top: 2em;
                         font-size: 1.2em;
                         font-weight: 600;
                     }
@@ -642,6 +636,8 @@ footer {
 
         &.square {
             width: 250px;
+            height: 100%;
+            padding: 25px 0px;
         }
 
     }
