--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -8,52 +8,53 @@ html {
 body {
   margin: 0px;
   padding: 0px;
+  font-family: Segoe UI, Roboto, Helvetica, Helvetica Neue, San Fransisco, Trebuchet MS !important;
   color: #444;
 }
 
-/* line 13, ../sass/index.scss */
+/* line 14, ../sass/index.scss */
 header .navbar__inner {
   display: inline-block;
   width: 40%;
 }
-/* line 18, ../sass/index.scss */
+/* line 19, ../sass/index.scss */
 header .navbar__inner .navbar__logo {
   display: inline-block;
   padding: 0px 25px;
 }
-/* line 23, ../sass/index.scss */
+/* line 24, ../sass/index.scss */
 header .navbar__inner .navbar__logo .__logo {
   width: 60px;
 }
-/* line 29, ../sass/index.scss */
+/* line 30, ../sass/index.scss */
 header .navbar__wrapper {
   display: inline-block;
   width: 58%;
   text-align: right;
   vertical-align: top;
 }
-/* line 36, ../sass/index.scss */
+/* line 37, ../sass/index.scss */
 header .navbar__wrapper .navbar_list {
   padding: 5px;
 }
-/* line 40, ../sass/index.scss */
+/* line 41, ../sass/index.scss */
 header .navbar__wrapper .navbar_list li {
   display: inline-block;
   padding: 0px;
 }
-/* line 44, ../sass/index.scss */
+/* line 45, ../sass/index.scss */
 header .navbar__wrapper .navbar_list li a {
   text-decoration: none;
   padding: 15px 15px;
   font-size: 1.1em;
   color: #707070;
 }
-/* line 50, ../sass/index.scss */
+/* line 51, ../sass/index.scss */
 header .navbar__wrapper .navbar_list li a:hover {
   border-bottom: 2px solid #FD2B2A;
 }
 
-/* line 61, ../sass/index.scss */
+/* line 62, ../sass/index.scss */
 .main .hero {
   text-align: center;
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(218, 33, 33, 0)), to(rgba(218, 33, 33, 0))), url("../images/bg.jpg");
@@ -63,29 +64,29 @@ header .navbar__wrapper .navbar_list li a:hover {
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* line 70, ../sass/index.scss */
+/* line 71, ../sass/index.scss */
 .main .hero .hero__content {
   display: flex;
   width: 650px;
   margin: 0 auto;
   align-items: center;
 }
-/* line 76, ../sass/index.scss */
+/* line 77, ../sass/index.scss */
 .main .hero .hero__content .__logo {
   height: 235px;
 }
-/* line 81, ../sass/index.scss */
+/* line 82, ../sass/index.scss */
 .main .hero .hero__content .hero__text {
   margin: 20px auto;
   padding: 0px 20px;
   text-align: center;
   border-left: 1px solid #aaa;
 }
-/* line 87, ../sass/index.scss */
+/* line 88, ../sass/index.scss */
 .main .hero .hero__content .hero__text h2 {
   font-size: 1.8em;
 }
-/* line 91, ../sass/index.scss */
+/* line 92, ../sass/index.scss */
 .main .hero .hero__content .hero__text a {
   font-size: 1.1em;
   border: 1px solid #FD2B2A;
@@ -94,21 +95,21 @@ header .navbar__wrapper .navbar_list li a:hover {
   border-radius: 30px;
   text-decoration: none;
 }
-/* line 99, ../sass/index.scss */
+/* line 100, ../sass/index.scss */
 .main .hero .hero__content .hero__text a:hover {
   background-color: #FD2B2A;
   color: #FFF;
 }
-/* line 109, ../sass/index.scss */
+/* line 110, ../sass/index.scss */
 .main .stack {
   text-align: center;
   margin: 100px 0;
 }
-/* line 114, ../sass/index.scss */
+/* line 115, ../sass/index.scss */
 .main .portfolio {
   margin: 100px 0;
 }
-/* line 117, ../sass/index.scss */
+/* line 118, ../sass/index.scss */
 .main .portfolio .row {
   margin: 0 auto;
   width: 80%;
@@ -116,22 +117,22 @@ header .navbar__wrapper .navbar_list li a:hover {
   display: flex;
   justify-content: space-between;
 }
-/* line 125, ../sass/index.scss */
+/* line 126, ../sass/index.scss */
 .main .portfolio .pf-card {
   display: inline-block;
   margin: 1em 1em;
   color: white;
 }
-/* line 130, ../sass/index.scss */
+/* line 131, ../sass/index.scss */
 .main .portfolio .pf-card .card-header {
   font-size: 1.4em;
   font-weight: 600;
 }
-/* line 135, ../sass/index.scss */
+/* line 136, ../sass/index.scss */
 .main .portfolio .pf-card .description {
   padding: 0em 2em;
 }
-/* line 139, ../sass/index.scss */
+/* line 140, ../sass/index.scss */
 .main .portfolio .pf-card.large {
   width: 650px;
   background-position: 50%;
@@ -139,17 +140,17 @@ header .navbar__wrapper .navbar_list li a:hover {
   background-size: cover;
   padding: 50px 0px;
 }
-/* line 146, ../sass/index.scss */
+/* line 147, ../sass/index.scss */
 .main .portfolio .pf-card.large.first {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(218, 33, 33, 0)), to(rgba(218, 33, 33, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(218, 33, 33, 0.7), rgba(218, 33, 33, 0.8)), url("../images/bg.jpg");
 }
-/* line 151, ../sass/index.scss */
+/* line 152, ../sass/index.scss */
 .main .portfolio .pf-card.large.second {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(12, 114, 36, 0)), to(rgba(12, 114, 36, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(12, 114, 36, 0.7), rgba(12, 114, 36, 0.8)), url("../images/bg.jpg");
 }
-/* line 158, ../sass/index.scss */
+/* line 159, ../sass/index.scss */
 .main .portfolio .pf-card.small {
   width: 450px;
   background-position: 50%;
@@ -157,27 +158,27 @@ header .navbar__wrapper .navbar_list li a:hover {
   background-size: cover;
   padding: 25px 0px;
 }
-/* line 165, ../sass/index.scss */
+/* line 166, ../sass/index.scss */
 .main .portfolio .pf-card.small .card-header {
   font-size: 1.2em;
   font-weight: 600;
 }
-/* line 170, ../sass/index.scss */
+/* line 171, ../sass/index.scss */
 .main .portfolio .pf-card.small.first {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(78, 44, 214, 0)), to(rgba(78, 44, 214, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(78, 44, 214, 0.7), rgba(78, 44, 214, 0.8)), url("../images/bg.jpg");
 }
-/* line 175, ../sass/index.scss */
+/* line 176, ../sass/index.scss */
 .main .portfolio .pf-card.small.second {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(171, 62, 198, 0)), to(rgba(171, 62, 198, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(171, 62, 198, 0.7), rgba(171, 62, 198, 0.8)), url("../images/bg.jpg");
 }
-/* line 180, ../sass/index.scss */
+/* line 181, ../sass/index.scss */
 .main .portfolio .pf-card.small.third {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(28, 177, 199, 0)), to(rgba(28, 177, 199, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(28, 177, 199, 0.7), rgba(28, 177, 199, 0.8)), url("../images/bg.jpg");
 }
-/* line 190, ../sass/index.scss */
+/* line 191, ../sass/index.scss */
 .main .contact .row {
   margin: 0 auto;
   width: 80%;
@@ -185,13 +186,13 @@ header .navbar__wrapper .navbar_list li a:hover {
   display: flex;
   justify-content: space-between;
 }
-/* line 199, ../sass/index.scss */
+/* line 200, ../sass/index.scss */
 .main .contact ul li {
   padding-bottom: 1.3em;
   font-size: 1.1em;
   list-style: none;
 }
-/* line 205, ../sass/index.scss */
+/* line 206, ../sass/index.scss */
 .main .contact ul li:before {
   position: relative;
   font-family: "FontAwesome";
@@ -199,44 +200,44 @@ header .navbar__wrapper .navbar_list li a:hover {
   color: #FD2B2A;
   margin: 0 12px 0 0;
 }
-/* line 213, ../sass/index.scss */
+/* line 214, ../sass/index.scss */
 .main .contact ul li.first:before {
   content: "\f041";
   margin: 0 20px 0 0;
 }
-/* line 218, ../sass/index.scss */
+/* line 219, ../sass/index.scss */
 .main .contact ul li.second:before {
   content: "\f0e0";
 }
-/* line 222, ../sass/index.scss */
+/* line 223, ../sass/index.scss */
 .main .contact ul li.third:before {
   content: "\f095";
 }
-/* line 226, ../sass/index.scss */
+/* line 227, ../sass/index.scss */
 .main .contact ul li span {
   margin-left: 20px;
 }
-/* line 230, ../sass/index.scss */
+/* line 231, ../sass/index.scss */
 .main .contact ul li i {
   color: #FD2B2A;
   font-size: 0.8em;
 }
-/* line 240, ../sass/index.scss */
+/* line 241, ../sass/index.scss */
 .main .contact #submit-form .row {
   width: 90%;
 }
-/* line 244, ../sass/index.scss */
+/* line 245, ../sass/index.scss */
 .main .contact #submit-form input[type=text] {
   border: none;
   box-shadow: none;
   border-bottom: 1px solid #adadad;
   border-radius: 0px;
-  padding: 15px;
+  padding: 1%;
   height: auto;
   margin-bottom: 30px;
   background-color: #f8f8f8;
 }
-/* line 255, ../sass/index.scss */
+/* line 256, ../sass/index.scss */
 .main .contact #submit-form input[type=submit] {
   display: block;
   margin: 0 auto;
@@ -249,42 +250,42 @@ header .navbar__wrapper .navbar_list li a:hover {
   text-transform: uppercase;
   text-decoration: none;
 }
-/* line 267, ../sass/index.scss */
+/* line 268, ../sass/index.scss */
 .main .contact #submit-form input[type=submit]:hover {
   color: #FD2B2A;
   background-color: #FFF;
 }
-/* line 273, ../sass/index.scss */
+/* line 274, ../sass/index.scss */
 .main .contact #submit-form .half-width {
   display: inline-block;
   width: 45%;
 }
-/* line 278, ../sass/index.scss */
+/* line 279, ../sass/index.scss */
 .main .contact #submit-form .full-width {
   display: inline-block;
-  width: 96%;
+  width: 100%;
 }
 
-/* line 287, ../sass/index.scss */
+/* line 288, ../sass/index.scss */
 footer {
   display: block;
   text-align: center;
   width: 85%;
   margin: 10px auto;
 }
-/* line 293, ../sass/index.scss */
+/* line 294, ../sass/index.scss */
 footer p {
   display: inline-block;
   width: 55%;
   text-align: left;
 }
-/* line 300, ../sass/index.scss */
+/* line 301, ../sass/index.scss */
 footer .icons {
   display: inline-block;
   text-align: right;
   width: 35%;
 }
-/* line 305, ../sass/index.scss */
+/* line 306, ../sass/index.scss */
 footer .icons li {
   display: inline-block;
   padding: 0 5px;
@@ -293,13 +294,13 @@ footer .icons li {
   text-decoration: none;
   color: #FD2B2A;
 }
-/* line 313, ../sass/index.scss */
+/* line 314, ../sass/index.scss */
 footer .icons li a {
   text-decoration: none;
   color: #FD2B2A;
 }
 
-/* line 321, ../sass/index.scss */
+/* line 322, ../sass/index.scss */
 .card {
   background-color: white;
   display: inline-block;
@@ -313,18 +314,18 @@ footer .icons li a {
   text-align: left;
   overflow: initial;
 }
-/* line 334, ../sass/index.scss */
+/* line 335, ../sass/index.scss */
 .card .card-header {
   text-align: center;
   font-size: 1.25em;
 }
-/* line 340, ../sass/index.scss */
+/* line 341, ../sass/index.scss */
 .card ul.stack__collection li {
   padding-bottom: 1em;
   font-size: 1.1em;
   list-style: none;
 }
-/* line 345, ../sass/index.scss */
+/* line 346, ../sass/index.scss */
 .card ul.stack__collection li:before {
   position: relative;
   font-family: "FontAwesome";
@@ -333,157 +334,158 @@ footer .icons li a {
   color: #FD2B2A;
   margin: 0 12px 0 0;
 }
-/* line 356, ../sass/index.scss */
+/* line 357, ../sass/index.scss */
 .card.medium {
   height: 290px;
   width: 290px;
   margin: 0px 1.2em;
 }
-/* line 362, ../sass/index.scss */
+/* line 363, ../sass/index.scss */
 .card.very-large {
   height: 300px;
   width: 800px;
   margin-right: 25px;
 }
-/* line 368, ../sass/index.scss */
+/* line 369, ../sass/index.scss */
 .card.square {
   height: 300px;
   width: 300px;
 }
 
-/* line 376, ../sass/index.scss */
+/* line 377, ../sass/index.scss */
 .section-header {
   text-align: center;
   font-size: 1.5em;
   margin: 50px 0px;
   font-weight: 600;
+  text-transform: uppercase;
 }
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  /* line 388, ../sass/index.scss */
+  /* line 390, ../sass/index.scss */
   header .navbar__inner {
     display: block;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 394, ../sass/index.scss */
+  /* line 396, ../sass/index.scss */
   header .navbar__inner .navbar__logo {
     display: inline-block;
     padding: 0px 25px;
   }
-  /* line 399, ../sass/index.scss */
+  /* line 401, ../sass/index.scss */
   header .navbar__inner .navbar__logo .__logo {
     width: 60px;
   }
-  /* line 405, ../sass/index.scss */
+  /* line 407, ../sass/index.scss */
   header .navbar__wrapper {
     display: block;
-    width: 95%;
+    width: 100%;
     text-align: center;
   }
-  /* line 411, ../sass/index.scss */
+  /* line 413, ../sass/index.scss */
   header .navbar__wrapper .navbar_list {
-    padding: 5px;
+    padding: 5px 0px;
     display: flex;
     justify-content: space-evenly;
   }
-  /* line 417, ../sass/index.scss */
+  /* line 419, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li {
     display: inline-block;
     padding: 0px;
   }
-  /* line 421, ../sass/index.scss */
+  /* line 423, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a {
     text-decoration: none;
     padding: 15px 15px;
     font-size: 1.1em;
     color: #707070;
   }
-  /* line 427, ../sass/index.scss */
+  /* line 429, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a:hover {
     border-bottom: 2px solid #FD2B2A;
   }
 
-  /* line 440, ../sass/index.scss */
+  /* line 442, ../sass/index.scss */
   .main .hero .hero__content {
     display: flex;
     width: 300px;
     margin: 0 auto;
   }
-  /* line 445, ../sass/index.scss */
+  /* line 447, ../sass/index.scss */
   .main .hero .hero__content .__logo {
     height: 150px;
   }
-  /* line 449, ../sass/index.scss */
+  /* line 451, ../sass/index.scss */
   .main .hero .hero__content .hero__text {
     margin: 20px auto;
     padding: 0px 10px;
     text-align: center;
   }
-  /* line 454, ../sass/index.scss */
+  /* line 456, ../sass/index.scss */
   .main .hero .hero__content .hero__text h2 {
     font-size: 1.0em;
   }
-  /* line 458, ../sass/index.scss */
+  /* line 460, ../sass/index.scss */
   .main .hero .hero__content .hero__text a {
     font-size: 0.9em;
   }
-  /* line 466, ../sass/index.scss */
+  /* line 468, ../sass/index.scss */
   .main .portfolio {
     margin: 100px 0;
   }
-  /* line 469, ../sass/index.scss */
+  /* line 471, ../sass/index.scss */
   .main .portfolio .row {
     width: 100%;
     display: block;
   }
-  /* line 474, ../sass/index.scss */
+  /* line 476, ../sass/index.scss */
   .main .portfolio .pf-card {
     display: inline-block;
     margin: 0.5em 0.5em;
     color: white;
   }
-  /* line 479, ../sass/index.scss */
+  /* line 481, ../sass/index.scss */
   .main .portfolio .pf-card .card-header {
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 484, ../sass/index.scss */
+  /* line 486, ../sass/index.scss */
   .main .portfolio .pf-card .description {
     padding: 0em 2em;
   }
-  /* line 488, ../sass/index.scss */
+  /* line 490, ../sass/index.scss */
   .main .portfolio .pf-card.large {
     width: 280px;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 496, ../sass/index.scss */
+  /* line 498, ../sass/index.scss */
   .main .portfolio .pf-card.small {
     width: 280px;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 502, ../sass/index.scss */
+  /* line 504, ../sass/index.scss */
   .main .portfolio .pf-card.small .card-header {
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 512, ../sass/index.scss */
+  /* line 514, ../sass/index.scss */
   .main .contact .row {
     margin: 0 auto;
     width: 100%;
     text-align: center;
     display: block;
   }
-  /* line 521, ../sass/index.scss */
+  /* line 523, ../sass/index.scss */
   .main .contact #submit-form .row {
     width: 90%;
   }
-  /* line 525, ../sass/index.scss */
+  /* line 527, ../sass/index.scss */
   .main .contact #submit-form input[type=text] {
     border: none;
     box-shadow: none;
@@ -494,7 +496,7 @@ footer .icons li a {
     margin-bottom: 30px;
     background-color: #f8f8f8;
   }
-  /* line 536, ../sass/index.scss */
+  /* line 538, ../sass/index.scss */
   .main .contact #submit-form input[type=submit] {
     height: 42px;
     border-radius: 27px;
@@ -510,43 +512,43 @@ footer .icons li a {
     cursor: pointer;
     text-transform: uppercase;
   }
-  /* line 551, ../sass/index.scss */
+  /* line 553, ../sass/index.scss */
   .main .contact #submit-form input[type=submit]:hover {
     color: #FD2B2A;
     background-color: #FFF;
   }
-  /* line 557, ../sass/index.scss */
+  /* line 559, ../sass/index.scss */
   .main .contact #submit-form .half-width {
     display: block;
     width: 80%;
     margin: auto;
   }
-  /* line 563, ../sass/index.scss */
+  /* line 565, ../sass/index.scss */
   .main .contact #submit-form .full-width {
     display: block;
     width: 80%;
     margin: auto;
   }
 
-  /* line 574, ../sass/index.scss */
+  /* line 576, ../sass/index.scss */
   footer {
     display: block;
     text-align: center;
   }
-  /* line 578, ../sass/index.scss */
+  /* line 580, ../sass/index.scss */
   footer p {
     display: block;
     width: 100%;
     text-align: center;
   }
-  /* line 584, ../sass/index.scss */
+  /* line 586, ../sass/index.scss */
   footer .icons {
     display: block;
     padding: 0px;
     width: 100%;
     text-align: center;
   }
-  /* line 591, ../sass/index.scss */
+  /* line 593, ../sass/index.scss */
   footer .icons li {
     display: inline-block;
     padding: 0 5px;
@@ -555,42 +557,48 @@ footer .icons li a {
     text-decoration: none;
     color: #FD2B2A;
   }
-  /* line 599, ../sass/index.scss */
+  /* line 601, ../sass/index.scss */
   footer .icons li a {
     text-decoration: none;
     color: #FD2B2A;
   }
 
-  /* line 608, ../sass/index.scss */
+  /* line 610, ../sass/index.scss */
   .card {
     padding: 10px 5px;
   }
-  /* line 612, ../sass/index.scss */
+  /* line 614, ../sass/index.scss */
   .card .card-header {
     text-align: center;
     font-size: 1.25em;
   }
-  /* line 618, ../sass/index.scss */
+  /* line 620, ../sass/index.scss */
   .card ul li {
     padding-bottom: 1em;
     font-size: 1.1em;
   }
-  /* line 624, ../sass/index.scss */
+  /* line 626, ../sass/index.scss */
   .card.medium {
     width: 250px;
     margin: 20px 1.2em;
   }
-  /* line 629, ../sass/index.scss */
+  /* line 631, ../sass/index.scss */
   .card.very-large {
     width: 250px;
     height: 100%;
     margin: 0px 0px 25px 0px;
     padding-bottom: 2em;
   }
-  /* line 637, ../sass/index.scss */
+  /* line 639, ../sass/index.scss */
   .card.square {
     width: 250px;
     height: 100%;
     padding: 25px 0px;
+  }
+}
+@media only screen and (min-device-width: 720px) and (max-device-width: 1024px) {
+  /* line 653, ../sass/index.scss */
+  .card.very-large {
+    width: 60%;
   }
 }
