make margins dynamic

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -125,7 +125,7 @@ header {
 
         .pf-card {
             display: inline-block;
-            margin: 1em 1em;
+            margin: 1%;
             color: white;
 
             .card-header {
@@ -475,7 +475,7 @@ footer {
 
             .pf-card {
                 display: inline-block;
-                margin: 0.5em 0.5em;
+                margin: 1%;
                 color: white;
 
                 .card-header {
