update the background color

--- a/sass/index.scss
+++ b/sass/index.scss
@@ -8,9 +8,12 @@ body {
     padding: 0px;
     font-family: Segoe UI, Roboto, Helvetica, Helvetica Neue, San Fransisco, Trebuchet MS !important;
     color: #444;
+    background: rgb(240,240,240);
 }
 
 header {
+
+    background: #FFF;
     .navbar__inner {
 
         display: inline-block;
