--- a/stylesheets/index.css
+++ b/stylesheets/index.css
@@ -10,51 +10,56 @@ body {
   padding: 0px;
   font-family: Segoe UI, Roboto, Helvetica, Helvetica Neue, San Fransisco, Trebuchet MS !important;
   color: #444;
+  background: #f0f0f0;
 }
 
 /* line 14, ../sass/index.scss */
+header {
+  background: #FFF;
+}
+/* line 17, ../sass/index.scss */
 header .navbar__inner {
   display: inline-block;
   width: 40%;
 }
-/* line 19, ../sass/index.scss */
+/* line 22, ../sass/index.scss */
 header .navbar__inner .navbar__logo {
   display: inline-block;
   padding: 0px 25px;
 }
-/* line 24, ../sass/index.scss */
+/* line 27, ../sass/index.scss */
 header .navbar__inner .navbar__logo .__logo {
   width: 60px;
 }
-/* line 30, ../sass/index.scss */
+/* line 33, ../sass/index.scss */
 header .navbar__wrapper {
   display: inline-block;
   width: 58%;
   text-align: right;
   vertical-align: top;
 }
-/* line 37, ../sass/index.scss */
+/* line 40, ../sass/index.scss */
 header .navbar__wrapper .navbar_list {
   padding: 5px;
 }
-/* line 41, ../sass/index.scss */
+/* line 44, ../sass/index.scss */
 header .navbar__wrapper .navbar_list li {
   display: inline-block;
   padding: 0px;
 }
-/* line 45, ../sass/index.scss */
+/* line 48, ../sass/index.scss */
 header .navbar__wrapper .navbar_list li a {
   text-decoration: none;
   padding: 15px 15px;
   font-size: 1.1em;
   color: #707070;
 }
-/* line 51, ../sass/index.scss */
+/* line 54, ../sass/index.scss */
 header .navbar__wrapper .navbar_list li a:hover {
   border-bottom: 2px solid #FD2B2A;
 }
 
-/* line 62, ../sass/index.scss */
+/* line 65, ../sass/index.scss */
 .main .hero {
   text-align: center;
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(218, 33, 33, 0)), to(rgba(218, 33, 33, 0))), url("../images/bg.jpg");
@@ -64,29 +69,29 @@ header .navbar__wrapper .navbar_list li a:hover {
   background-repeat: no-repeat;
   background-size: cover;
 }
-/* line 71, ../sass/index.scss */
+/* line 74, ../sass/index.scss */
 .main .hero .hero__content {
   display: flex;
   width: 650px;
   margin: 0 auto;
   align-items: center;
 }
-/* line 77, ../sass/index.scss */
+/* line 80, ../sass/index.scss */
 .main .hero .hero__content .__logo {
   height: 235px;
 }
-/* line 82, ../sass/index.scss */
+/* line 85, ../sass/index.scss */
 .main .hero .hero__content .hero__text {
   margin: 20px auto;
   padding: 0px 20px;
   text-align: center;
   border-left: 1px solid #aaa;
 }
-/* line 88, ../sass/index.scss */
+/* line 91, ../sass/index.scss */
 .main .hero .hero__content .hero__text h2 {
   font-size: 1.8em;
 }
-/* line 92, ../sass/index.scss */
+/* line 95, ../sass/index.scss */
 .main .hero .hero__content .hero__text a {
   font-size: 1.1em;
   border: 1px solid #FD2B2A;
@@ -95,21 +100,21 @@ header .navbar__wrapper .navbar_list li a:hover {
   border-radius: 30px;
   text-decoration: none;
 }
-/* line 100, ../sass/index.scss */
+/* line 103, ../sass/index.scss */
 .main .hero .hero__content .hero__text a:hover {
   background-color: #FD2B2A;
   color: #FFF;
 }
-/* line 110, ../sass/index.scss */
+/* line 113, ../sass/index.scss */
 .main .stack {
   text-align: center;
   margin: 100px 0;
 }
-/* line 115, ../sass/index.scss */
+/* line 118, ../sass/index.scss */
 .main .portfolio {
   margin: 100px 0;
 }
-/* line 118, ../sass/index.scss */
+/* line 121, ../sass/index.scss */
 .main .portfolio .row {
   margin: 0 auto;
   width: 80%;
@@ -117,22 +122,22 @@ header .navbar__wrapper .navbar_list li a:hover {
   display: flex;
   justify-content: space-between;
 }
-/* line 126, ../sass/index.scss */
+/* line 129, ../sass/index.scss */
 .main .portfolio .pf-card {
   display: inline-block;
   margin: 1%;
   color: white;
 }
-/* line 131, ../sass/index.scss */
+/* line 134, ../sass/index.scss */
 .main .portfolio .pf-card .card-header {
   font-size: 1.4em;
   font-weight: 600;
 }
-/* line 136, ../sass/index.scss */
+/* line 139, ../sass/index.scss */
 .main .portfolio .pf-card .description {
   padding: 0em 2em;
 }
-/* line 140, ../sass/index.scss */
+/* line 143, ../sass/index.scss */
 .main .portfolio .pf-card.large {
   width: 650px;
   background-position: 50%;
@@ -140,17 +145,17 @@ header .navbar__wrapper .navbar_list li a:hover {
   background-size: cover;
   padding: 50px 0px;
 }
-/* line 147, ../sass/index.scss */
+/* line 150, ../sass/index.scss */
 .main .portfolio .pf-card.large.first {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(218, 33, 33, 0)), to(rgba(218, 33, 33, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(218, 33, 33, 0.7), rgba(218, 33, 33, 0.8)), url("../images/bg.jpg");
 }
-/* line 152, ../sass/index.scss */
+/* line 155, ../sass/index.scss */
 .main .portfolio .pf-card.large.second {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(12, 114, 36, 0)), to(rgba(12, 114, 36, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(12, 114, 36, 0.7), rgba(12, 114, 36, 0.8)), url("../images/bg.jpg");
 }
-/* line 159, ../sass/index.scss */
+/* line 162, ../sass/index.scss */
 .main .portfolio .pf-card.small {
   width: 450px;
   background-position: 50%;
@@ -158,27 +163,27 @@ header .navbar__wrapper .navbar_list li a:hover {
   background-size: cover;
   padding: 25px 0px;
 }
-/* line 166, ../sass/index.scss */
+/* line 169, ../sass/index.scss */
 .main .portfolio .pf-card.small .card-header {
   font-size: 1.2em;
   font-weight: 600;
 }
-/* line 171, ../sass/index.scss */
+/* line 174, ../sass/index.scss */
 .main .portfolio .pf-card.small.first {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(78, 44, 214, 0)), to(rgba(78, 44, 214, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(78, 44, 214, 0.7), rgba(78, 44, 214, 0.8)), url("../images/bg.jpg");
 }
-/* line 176, ../sass/index.scss */
+/* line 179, ../sass/index.scss */
 .main .portfolio .pf-card.small.second {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(171, 62, 198, 0)), to(rgba(171, 62, 198, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(171, 62, 198, 0.7), rgba(171, 62, 198, 0.8)), url("../images/bg.jpg");
 }
-/* line 181, ../sass/index.scss */
+/* line 184, ../sass/index.scss */
 .main .portfolio .pf-card.small.third {
   background-image: -webkit-gradient(linear, right top, left top, from(rgba(28, 177, 199, 0)), to(rgba(28, 177, 199, 0))), url("../images/bg.jpg");
   background-image: linear-gradient(270deg, rgba(28, 177, 199, 0.7), rgba(28, 177, 199, 0.8)), url("../images/bg.jpg");
 }
-/* line 191, ../sass/index.scss */
+/* line 194, ../sass/index.scss */
 .main .contact .row {
   margin: 0 auto;
   width: 80%;
@@ -186,13 +191,13 @@ header .navbar__wrapper .navbar_list li a:hover {
   display: flex;
   justify-content: space-between;
 }
-/* line 200, ../sass/index.scss */
+/* line 203, ../sass/index.scss */
 .main .contact ul li {
   padding-bottom: 1.3em;
   font-size: 1.1em;
   list-style: none;
 }
-/* line 206, ../sass/index.scss */
+/* line 209, ../sass/index.scss */
 .main .contact ul li:before {
   position: relative;
   font-family: "FontAwesome";
@@ -200,33 +205,33 @@ header .navbar__wrapper .navbar_list li a:hover {
   color: #FD2B2A;
   margin: 0 12px 0 0;
 }
-/* line 214, ../sass/index.scss */
+/* line 217, ../sass/index.scss */
 .main .contact ul li.first:before {
   content: "\f041";
   margin: 0 20px 0 0;
 }
-/* line 219, ../sass/index.scss */
+/* line 222, ../sass/index.scss */
 .main .contact ul li.second:before {
   content: "\f0e0";
 }
-/* line 223, ../sass/index.scss */
+/* line 226, ../sass/index.scss */
 .main .contact ul li.third:before {
   content: "\f095";
 }
-/* line 227, ../sass/index.scss */
+/* line 230, ../sass/index.scss */
 .main .contact ul li span {
   margin-left: 20px;
 }
-/* line 231, ../sass/index.scss */
+/* line 234, ../sass/index.scss */
 .main .contact ul li i {
   color: #FD2B2A;
   font-size: 0.8em;
 }
-/* line 241, ../sass/index.scss */
+/* line 244, ../sass/index.scss */
 .main .contact #submit-form .row {
   width: 90%;
 }
-/* line 245, ../sass/index.scss */
+/* line 248, ../sass/index.scss */
 .main .contact #submit-form input[type=text] {
   border: none;
   box-shadow: none;
@@ -237,7 +242,7 @@ header .navbar__wrapper .navbar_list li a:hover {
   margin-bottom: 30px;
   background-color: #f8f8f8;
 }
-/* line 256, ../sass/index.scss */
+/* line 259, ../sass/index.scss */
 .main .contact #submit-form input[type=submit] {
   display: block;
   margin: 0 auto;
@@ -250,42 +255,42 @@ header .navbar__wrapper .navbar_list li a:hover {
   text-transform: uppercase;
   text-decoration: none;
 }
-/* line 268, ../sass/index.scss */
+/* line 271, ../sass/index.scss */
 .main .contact #submit-form input[type=submit]:hover {
   color: #FD2B2A;
   background-color: #FFF;
 }
-/* line 274, ../sass/index.scss */
+/* line 277, ../sass/index.scss */
 .main .contact #submit-form .half-width {
   display: inline-block;
   width: 45%;
 }
-/* line 279, ../sass/index.scss */
+/* line 282, ../sass/index.scss */
 .main .contact #submit-form .full-width {
   display: inline-block;
   width: 100%;
 }
 
-/* line 288, ../sass/index.scss */
+/* line 291, ../sass/index.scss */
 footer {
   display: block;
   text-align: center;
   width: 85%;
   margin: 10px auto;
 }
-/* line 294, ../sass/index.scss */
+/* line 297, ../sass/index.scss */
 footer p {
   display: inline-block;
   width: 55%;
   text-align: left;
 }
-/* line 301, ../sass/index.scss */
+/* line 304, ../sass/index.scss */
 footer .icons {
   display: inline-block;
   text-align: right;
   width: 35%;
 }
-/* line 306, ../sass/index.scss */
+/* line 309, ../sass/index.scss */
 footer .icons li {
   display: inline-block;
   padding: 0 5px;
@@ -294,13 +299,13 @@ footer .icons li {
   text-decoration: none;
   color: #FD2B2A;
 }
-/* line 314, ../sass/index.scss */
+/* line 317, ../sass/index.scss */
 footer .icons li a {
   text-decoration: none;
   color: #FD2B2A;
 }
 
-/* line 322, ../sass/index.scss */
+/* line 325, ../sass/index.scss */
 .card {
   background-color: white;
   display: inline-block;
@@ -314,18 +319,18 @@ footer .icons li a {
   text-align: left;
   overflow: initial;
 }
-/* line 335, ../sass/index.scss */
+/* line 338, ../sass/index.scss */
 .card .card-header {
   text-align: center;
   font-size: 1.25em;
 }
-/* line 341, ../sass/index.scss */
+/* line 344, ../sass/index.scss */
 .card ul.stack__collection li {
   padding-bottom: 1em;
   font-size: 1.1em;
   list-style: none;
 }
-/* line 346, ../sass/index.scss */
+/* line 349, ../sass/index.scss */
 .card ul.stack__collection li:before {
   position: relative;
   font-family: "FontAwesome";
@@ -334,25 +339,25 @@ footer .icons li a {
   color: #FD2B2A;
   margin: 0 12px 0 0;
 }
-/* line 357, ../sass/index.scss */
+/* line 360, ../sass/index.scss */
 .card.medium {
   height: 290px;
   width: 290px;
   margin: 0px 1.2em;
 }
-/* line 363, ../sass/index.scss */
+/* line 366, ../sass/index.scss */
 .card.very-large {
   height: 300px;
   width: 800px;
   margin-right: 25px;
 }
-/* line 369, ../sass/index.scss */
+/* line 372, ../sass/index.scss */
 .card.square {
   height: 300px;
   width: 300px;
 }
 
-/* line 377, ../sass/index.scss */
+/* line 380, ../sass/index.scss */
 .section-header {
   text-align: center;
   font-size: 1.5em;
@@ -363,129 +368,129 @@ footer .icons li a {
 
 /* Smartphones (portrait and landscape) ----------- */
 @media only screen and (min-device-width: 320px) and (max-device-width: 480px) {
-  /* line 390, ../sass/index.scss */
+  /* line 393, ../sass/index.scss */
   header .navbar__inner {
     display: block;
     margin: 0 auto;
     text-align: center;
   }
-  /* line 396, ../sass/index.scss */
+  /* line 399, ../sass/index.scss */
   header .navbar__inner .navbar__logo {
     display: inline-block;
     padding: 0px 25px;
   }
-  /* line 401, ../sass/index.scss */
+  /* line 404, ../sass/index.scss */
   header .navbar__inner .navbar__logo .__logo {
     width: 60px;
   }
-  /* line 407, ../sass/index.scss */
+  /* line 410, ../sass/index.scss */
   header .navbar__wrapper {
     display: block;
     width: 100%;
     text-align: center;
   }
-  /* line 413, ../sass/index.scss */
+  /* line 416, ../sass/index.scss */
   header .navbar__wrapper .navbar_list {
     padding: 5px 0px;
     display: flex;
     justify-content: space-evenly;
   }
-  /* line 419, ../sass/index.scss */
+  /* line 422, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li {
     display: inline-block;
     padding: 0px;
   }
-  /* line 423, ../sass/index.scss */
+  /* line 426, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a {
     text-decoration: none;
     padding: 15px 15px;
     font-size: 1.1em;
     color: #707070;
   }
-  /* line 429, ../sass/index.scss */
+  /* line 432, ../sass/index.scss */
   header .navbar__wrapper .navbar_list li a:hover {
     border-bottom: 2px solid #FD2B2A;
   }
 
-  /* line 442, ../sass/index.scss */
+  /* line 445, ../sass/index.scss */
   .main .hero .hero__content {
     display: flex;
     width: 300px;
     margin: 0 auto;
   }
-  /* line 447, ../sass/index.scss */
+  /* line 450, ../sass/index.scss */
   .main .hero .hero__content .__logo {
     height: 150px;
   }
-  /* line 451, ../sass/index.scss */
+  /* line 454, ../sass/index.scss */
   .main .hero .hero__content .hero__text {
     margin: 20px auto;
     padding: 0px 10px;
     text-align: center;
   }
-  /* line 456, ../sass/index.scss */
+  /* line 459, ../sass/index.scss */
   .main .hero .hero__content .hero__text h2 {
     font-size: 1.0em;
   }
-  /* line 460, ../sass/index.scss */
+  /* line 463, ../sass/index.scss */
   .main .hero .hero__content .hero__text a {
     font-size: 0.9em;
   }
-  /* line 468, ../sass/index.scss */
+  /* line 471, ../sass/index.scss */
   .main .portfolio {
     margin: 100px 0;
   }
-  /* line 471, ../sass/index.scss */
+  /* line 474, ../sass/index.scss */
   .main .portfolio .row {
     width: 100%;
     display: block;
   }
-  /* line 476, ../sass/index.scss */
+  /* line 479, ../sass/index.scss */
   .main .portfolio .pf-card {
     display: inline-block;
     margin: 1%;
     color: white;
   }
-  /* line 481, ../sass/index.scss */
+  /* line 484, ../sass/index.scss */
   .main .portfolio .pf-card .card-header {
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 486, ../sass/index.scss */
+  /* line 489, ../sass/index.scss */
   .main .portfolio .pf-card .description {
     padding: 0em 2em;
   }
-  /* line 490, ../sass/index.scss */
+  /* line 493, ../sass/index.scss */
   .main .portfolio .pf-card.large {
     width: 280px;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 498, ../sass/index.scss */
+  /* line 501, ../sass/index.scss */
   .main .portfolio .pf-card.small {
     width: 280px;
     background-position: 50%;
     background-repeat: no-repeat;
     background-size: cover;
   }
-  /* line 504, ../sass/index.scss */
+  /* line 507, ../sass/index.scss */
   .main .portfolio .pf-card.small .card-header {
     font-size: 1.2em;
     font-weight: 600;
   }
-  /* line 514, ../sass/index.scss */
+  /* line 517, ../sass/index.scss */
   .main .contact .row {
     margin: 0 auto;
     width: 100%;
     text-align: center;
     display: block;
   }
-  /* line 523, ../sass/index.scss */
+  /* line 526, ../sass/index.scss */
   .main .contact #submit-form .row {
     width: 90%;
   }
-  /* line 527, ../sass/index.scss */
+  /* line 530, ../sass/index.scss */
   .main .contact #submit-form input[type=text] {
     border: none;
     box-shadow: none;
@@ -496,7 +501,7 @@ footer .icons li a {
     margin-bottom: 30px;
     background-color: #f8f8f8;
   }
-  /* line 538, ../sass/index.scss */
+  /* line 541, ../sass/index.scss */
   .main .contact #submit-form input[type=submit] {
     height: 42px;
     border-radius: 27px;
@@ -512,43 +517,43 @@ footer .icons li a {
     cursor: pointer;
     text-transform: uppercase;
   }
-  /* line 553, ../sass/index.scss */
+  /* line 556, ../sass/index.scss */
   .main .contact #submit-form input[type=submit]:hover {
     color: #FD2B2A;
     background-color: #FFF;
   }
-  /* line 559, ../sass/index.scss */
+  /* line 562, ../sass/index.scss */
   .main .contact #submit-form .half-width {
     display: block;
     width: 80%;
     margin: auto;
   }
-  /* line 565, ../sass/index.scss */
+  /* line 568, ../sass/index.scss */
   .main .contact #submit-form .full-width {
     display: block;
     width: 80%;
     margin: auto;
   }
 
-  /* line 576, ../sass/index.scss */
+  /* line 579, ../sass/index.scss */
   footer {
     display: block;
     text-align: center;
   }
-  /* line 580, ../sass/index.scss */
+  /* line 583, ../sass/index.scss */
   footer p {
     display: block;
     width: 100%;
     text-align: center;
   }
-  /* line 586, ../sass/index.scss */
+  /* line 589, ../sass/index.scss */
   footer .icons {
     display: block;
     padding: 0px;
     width: 100%;
     text-align: center;
   }
-  /* line 593, ../sass/index.scss */
+  /* line 596, ../sass/index.scss */
   footer .icons li {
     display: inline-block;
     padding: 0 5px;
@@ -557,39 +562,39 @@ footer .icons li a {
     text-decoration: none;
     color: #FD2B2A;
   }
-  /* line 601, ../sass/index.scss */
+  /* line 604, ../sass/index.scss */
   footer .icons li a {
     text-decoration: none;
     color: #FD2B2A;
   }
 
-  /* line 610, ../sass/index.scss */
+  /* line 613, ../sass/index.scss */
   .card {
     padding: 10px 5px;
   }
-  /* line 614, ../sass/index.scss */
+  /* line 617, ../sass/index.scss */
   .card .card-header {
     text-align: center;
     font-size: 1.25em;
   }
-  /* line 620, ../sass/index.scss */
+  /* line 623, ../sass/index.scss */
   .card ul li {
     padding-bottom: 1em;
     font-size: 1.1em;
   }
-  /* line 626, ../sass/index.scss */
+  /* line 629, ../sass/index.scss */
   .card.medium {
     width: 250px;
     margin: 20px 1.2em;
   }
-  /* line 631, ../sass/index.scss */
+  /* line 634, ../sass/index.scss */
   .card.very-large {
     width: 250px;
     height: 100%;
     margin: 0px 0px 25px 0px;
     padding-bottom: 2em;
   }
-  /* line 639, ../sass/index.scss */
+  /* line 642, ../sass/index.scss */
   .card.square {
     width: 250px;
     height: 100%;
@@ -597,7 +602,7 @@ footer .icons li a {
   }
 }
 @media only screen and (min-device-width: 720px) and (max-device-width: 1024px) {
-  /* line 653, ../sass/index.scss */
+  /* line 656, ../sass/index.scss */
   .card.very-large {
     width: 60%;
   }
